Adding layout from mock site

--- a/www/package.json
+++ b/www/package.json
@@ -9,19 +9,20 @@
   "dependencies": {
     "gatsby": "next",
     "gatsby-link": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-preact": "next",
+    "gatsby-plugin-sass": "^1.0.0-beta.1",
     "gatsby-plugin-sharp": "next",
-    "gatsby-source-filesystem": "next",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-prismjs": "next",
     "gatsby-remark-responsive-iframe": "next",
     "gatsby-remark-responsive-image": "next",
     "gatsby-remark-smartypants": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-sharp": "next",
     "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "react-helmet": "^4.0.0",
