--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babylon": "6.15.0",
     "browserify": "^13.0.0",
     "bundle-collapser": "^1.1.1",
+    "bundlesize": "^0.5.8",
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "coffee-script": "^1.8.0",
@@ -113,7 +114,7 @@
     "linc": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --",
     "lint": "node ./scripts/tasks/eslint.js",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "test": "jest",
+    "test": "jest && bundlesize",
     "flow": "node ./scripts/tasks/flow.js",
     "prettier": "node ./scripts/prettier/index.js write-changed",
     "prettier-all": "node ./scripts/prettier/index.js write",
@@ -155,5 +156,11 @@
       "!src/test/*.js"
     ],
     "timers": "fake"
-  }
+  },
+  "bundlesize": [
+     {
+       "path": "dist/react.min.js",
+       "threshold": "8kB"
+     }
+  ]
 }
