Updated Gatsby (and plugins) to 1.0

--- a/www/package.json
+++ b/www/package.json
@@ -8,23 +8,23 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "docsearch.js": "^2.3.3",
-    "gatsby": "next",
-    "gatsby-link": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-preact": "next",
-    "gatsby-plugin-sass": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-remark-autolink-headers": "next",
-    "gatsby-remark-copy-linked-files": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-remark-responsive-iframe": "next",
+    "gatsby": "^1.0.5",
+    "gatsby-link": "^1.0.1",
+    "gatsby-plugin-google-analytics": "^1.0.1",
+    "gatsby-plugin-manifest": "^1.0.1",
+    "gatsby-plugin-offline": "^1.0.1",
+    "gatsby-plugin-preact": "^1.0.1",
+    "gatsby-plugin-sass": "^1.0.1",
+    "gatsby-plugin-sharp": "^1.0.1",
+    "gatsby-remark-autolink-headers": "^1.0.1",
+    "gatsby-remark-copy-linked-files": "^1.0.1",
+    "gatsby-remark-prismjs": "^1.0.1",
+    "gatsby-remark-responsive-iframe": "^1.0.1",
     "gatsby-remark-responsive-image": "next",
-    "gatsby-remark-smartypants": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby-remark-smartypants": "^1.0.1",
+    "gatsby-source-filesystem": "^1.0.1",
+    "gatsby-transformer-remark": "^1.0.1",
+    "gatsby-transformer-sharp": "^1.0.1",
     "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "react-helmet": "^4.0.0",
