Use gatsby-plugin-react-helmet

--- a/www/package.json
+++ b/www/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "docsearch.js": "^2.3.3",
-    "gatsby": "^1.0.5",
+    "gatsby": "^1.0.6",
     "gatsby-link": "^1.0.1",
     "gatsby-plugin-google-analytics": "^1.0.1",
     "gatsby-plugin-manifest": "^1.0.1",
     "gatsby-plugin-offline": "^1.0.1",
     "gatsby-plugin-preact": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^1.0.1",
     "gatsby-plugin-sass": "^1.0.1",
     "gatsby-plugin-sharp": "^1.0.1",
     "gatsby-remark-autolink-headers": "^1.0.1",
@@ -27,7 +28,6 @@
     "gatsby-transformer-sharp": "^1.0.1",
     "lodash": "^4.15.0",
     "moment": "^2.14.1",
-    "react-helmet": "^4.0.0",
     "react-live": "^1.7.0",
     "react-responsive-grid": "^0.3.3",
     "react-sticky": "^6.0.1",
