--- a/www/package.json
+++ b/www/package.json
@@ -45,6 +45,9 @@
     "gh-pages": "^0.12.0",
     "rimraf": "^2.6.1"
   },
+  "engines": {
+    "node": ">=7.6.0"
+  },
   "homepage": "https://facebook.github.io/react/",
   "keywords": [
     "gatsby"
