--- a/fixtures/dom/package.json
+++ b/fixtures/dom/package.json
@@ -6,12 +6,10 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.0.1",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "^2.0.1",
-    "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.4",
     "detect-port": "^1.2.1",
@@ -50,7 +48,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "prestart": "cp ../../build/dist/{react,react-dom}.development.js public/",
-    "build": "node scripts/build.js && cp build/index.html build/200.html"
+    "build": "scripts/build"
   },
   "babel": {
     "presets": [
