DOM Fixtures: Update some deploy scripts

--- a/fixtures/dom/package.json
+++ b/fixtures/dom/package.json
@@ -2,34 +2,32 @@
   "name": "react-fixtures",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-react-app": "^3.0.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "^2.0.1",
+    "classnames": "^2.2.5",
+    "component-playground": "^2.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.4",
     "detect-port": "^1.2.1",
     "dotenv": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "filesize": "^3.5.10",
-    "fs-extra": "^4.0.0",
-    "gzip-size": "3.0.0",
     "html-webpack-plugin": "^2.29.0",
-    "http-proxy-middleware": "^0.17.4",
-    "json-loader": "0.5.4",
     "object-assign": "^4.1.1",
+    "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "promise": "^8.0.1",
+    "query-string": "^4.3.4",
     "react-dev-utils": "^3.0.2",
-    "react-scripts": "^1.0.10",
-    "recursive-readdir": "^2.2.1",
-    "rimraf": "^2.6.1",
-    "strip-ansi": "^4.0.0",
+    "react-error-overlay": "^1.0.9",
+    "semver": "^5.3.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.2.0",
@@ -37,16 +35,9 @@
     "webpack-manifest-plugin": "^1.1.2",
     "whatwg-fetch": "^2.0.3"
   },
-  "dependencies": {
-    "babel-preset-stage-2": "^6.24.1",
-    "classnames": "^2.2.5",
-    "component-playground": "^2.0.0",
-    "prop-types": "^15.5.10",
-    "query-string": "^4.3.4",
-    "semver": "^5.3.0"
-  },
   "scripts": {
     "start": "node scripts/start.js",
+    "deploy": "scripts/deploy",
     "prestart": "cp ../../build/dist/{react,react-dom}.development.js public/",
     "build": "scripts/build"
   },
