--- a/fixtures/dom/scripts/build
+++ b/fixtures/dom/scripts/build
@@ -6,10 +6,10 @@ rm -rf build/*
 
 cp public/* build/
 
+# Copy over the local build of React
 cp ../../build/dist/{react,react-dom}.development.js build/
 
-NODE_ENV=production BABEL_ENV=production webpack --config config/webpack.config.prod.js
+NODE_ENV=production BABEL_ENV=production webpack --progress --config config/webpack.config.prod.js
 
+# Copy over a 200.html for a catch all
 cp build/index.html build/200.html
-
-surge build react-dom-fixtures.surge.sh
