Refactore below_nav and wrapper CSS classes. Added 404 page. This commit breaks sidebar layout a bit but it was already broken so I'm ignoring that ofr now

--- a/www/package.json
+++ b/www/package.json
@@ -6,6 +6,7 @@
     "url": "https://github.com/facebook/react"
   },
   "dependencies": {
+    "babel-standalone": "^6.25.0",
     "classnames": "^2.2.5",
     "docsearch.js": "^2.3.3",
     "gatsby": "^1.2.0",
