--- a/www/package.json
+++ b/www/package.json
@@ -7,26 +7,27 @@
   },
   "dependencies": {
     "babel-standalone": "^6.25.0",
-    "classnames": "^2.2.5",
     "docsearch.js": "^2.3.3",
-    "gatsby": "^1.2.0",
-    "gatsby-link": "^1.0.9",
+    "gatsby": "^1.3.0",
+    "gatsby-link": "^1.3.0",
+    "gatsby-plugin-glamor": "^1.1.0",
     "gatsby-plugin-google-analytics": "^1.0.1",
     "gatsby-plugin-manifest": "^1.0.1",
     "gatsby-plugin-offline": "^1.0.1",
     "gatsby-plugin-preact": "^1.0.1",
     "gatsby-plugin-react-helmet": "^1.0.1",
-    "gatsby-plugin-sass": "^1.0.1",
-    "gatsby-plugin-sharp": "^1.0.1",
+    "gatsby-plugin-sharp": "^1.3.0",
     "gatsby-remark-autolink-headers": "^1.0.1",
-    "gatsby-remark-copy-linked-files": "^1.0.1",
+    "gatsby-remark-copy-linked-files": "^1.3.0",
     "gatsby-remark-prismjs": "^1.2.0",
-    "gatsby-remark-responsive-iframe": "^1.0.1",
+    "gatsby-remark-responsive-iframe": "^1.3.0",
     "gatsby-remark-responsive-image": "next",
     "gatsby-remark-smartypants": "^1.0.1",
     "gatsby-source-filesystem": "^1.0.1",
     "gatsby-transformer-remark": "^1.1.0",
     "gatsby-transformer-sharp": "^1.0.1",
+    "glamor": "^2.20.29",
+    "hex2rgba": "^0.0.1",
     "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "react-live": "^1.7.0",
@@ -36,9 +37,9 @@
     "react-typography": "^0.15.0",
     "remarkable": "^1.7.1",
     "safe-access": "^0.1.0",
-    "typeface-merriweather": "^0.0.25",
-    "typeface-montserrat": "^0.0.24",
-    "typography": "^0.15.8",
+    "typeface-merriweather": "^0.0.31",
+    "typeface-montserrat": "^0.0.31",
+    "typography": "^0.15.12",
     "typography-theme-wordpress-2016": "^0.15.1",
     "underscore.string": "^3.2.3"
   },
