--- a/.flowconfig
+++ b/.flowconfig
@@ -14,6 +14,7 @@
 # Ignore Docs
 <PROJECT_ROOT>/docs/.*
 <PROJECT_ROOT>/.*/docs/.*
+<PROJECT_ROOT>/www/.*
 
 [include]
 ./www/node_modules/hex2rgba/
