[WIP] Run Jest in PROD mode too

--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
   "jest": {
     "projects": [
       "<rootDir>/scripts/jest/stack.config.json",
-      "<rootDir>/scripts/jest/fiber.config.json"
+      "<rootDir>/scripts/jest/fiber.config.json",
+      "<rootDir>/scripts/jest/fiber.prod.config.json"
     ]
   }
 }
