--- a/packages/react-noop-renderer/package.json
+++ b/packages/react-noop-renderer/package.json
@@ -7,8 +7,7 @@
   "repository": "facebook/react",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "fbjs": "^0.8.9",
-    "object-assign": "^4.1.0"
+    "fbjs": "^0.8.9"
   },
   "files": [
     "LICENSE",
