--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -27,14 +27,14 @@
     "README.md",
     "index.js",
     "server.js",
+    "server.browser.js",
     "test-utils.js",
     "unstable-native-dependencies.js",
     "cjs/",
     "umd/"
   ],
   "browser": {
-    "./cjs/react-dom-server-node.development.js": "./cjs/react-dom-server-browser.development.js",
-    "./cjs/react-dom-server-node.production.min.js": "./cjs/react-dom-server-browser.production.min.js"
+    "./server.js": "./server.browser.js"
   },
   "browserify": {
     "transform": [
