--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.1.0",
-    "babel-jest": "20.1.0-delta.1",
+    "babel-jest": "20.1.0-echo.1",
     "babel-plugin-check-es2015-constants": "^6.5.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.5.0",
@@ -60,11 +60,11 @@
     "glob-stream": "^6.1.0",
     "gzip-js": "~0.3.2",
     "gzip-size": "^3.0.0",
-    "jest": "20.1.0-delta.1",
-    "jest-config": "20.1.0-delta.1",
-    "jest-jasmine2": "20.1.0-delta.1",
-    "jest-matchers": "20.1.0-delta.1",
-    "jest-runtime": "20.1.0-delta.1",
+    "jest": "20.1.0-echo.1",
+    "jest-config": "20.1.0-echo.1",
+    "jest-jasmine2": "20.1.0-echo.1",
+    "jest-matchers": "20.1.0-echo.1",
+    "jest-runtime": "20.1.0-echo.1",
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
