--- a/.babelrc
+++ b/.babelrc
@@ -20,6 +20,7 @@
     ["transform-es2015-destructuring", { "loose": true }],
     ["transform-es2015-block-scoping", { "throwIfClosureRequired": true }],
     "transform-es3-member-expression-literals",
-    "transform-es3-property-literals"
+    "transform-es3-property-literals",
+    "transform-es5-property-mutators"
   ]
 }
