--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "babel-standalone": "^6.26.0",
     "docsearch.js": "^2.4.1",
-    "gatsby": "^1.3.2",
+    "gatsby": "1.6.6",
     "gatsby-link": "^1.6.7",
     "gatsby-plugin-glamor": "^1.6.3",
     "gatsby-plugin-google-analytics": "^1.0.3",
