--- a/www/package.json
+++ b/www/package.json
@@ -16,14 +16,14 @@
     "gatsby-plugin-offline": "^1.0.3",
     "gatsby-plugin-preact": "^1.0.2",
     "gatsby-plugin-react-helmet": "^1.0.2",
-    "gatsby-plugin-sharp": "^1.3.0",
+    "gatsby-plugin-sharp": "1.6.0",
     "gatsby-remark-autolink-headers": "^1.4.3",
     "gatsby-remark-copy-linked-files": "^1.5.1",
     "gatsby-remark-prismjs": "^1.2.0",
     "gatsby-remark-responsive-iframe": "^1.4.2",
     "gatsby-remark-responsive-image": "next",
     "gatsby-remark-smartypants": "^1.4.2",
-    "gatsby-source-filesystem": "^1.0.1",
+    "gatsby-source-filesystem": "1.4.1",
     "gatsby-transformer-remark": "^1.7.0",
     "gatsby-transformer-sharp": "^1.6.0",
     "glamor": "^2.20.40",
