Move layout components out of layout directory

--- a/www/package.json
+++ b/www/package.json
@@ -8,8 +8,8 @@
   "dependencies": {
     "babel-standalone": "^6.26.0",
     "docsearch.js": "^2.4.1",
-    "gatsby": "1.6.6",
-    "gatsby-link": "^1.6.8",
+    "gatsby": "^1.8.16",
+    "gatsby-link": "^1.6.9",
     "gatsby-plugin-glamor": "^1.6.4",
     "gatsby-plugin-google-analytics": "^1.0.4",
     "gatsby-plugin-manifest": "^1.0.4",
@@ -23,8 +23,8 @@
     "gatsby-remark-responsive-iframe": "^1.4.3",
     "gatsby-remark-responsive-image": "next",
     "gatsby-remark-smartypants": "^1.4.3",
-    "gatsby-source-filesystem": "^1.4.3",
-    "gatsby-transformer-remark": "^1.7.1",
+    "gatsby-source-filesystem": "^1.4.4",
+    "gatsby-transformer-remark": "^1.7.2",
     "gatsby-transformer-sharp": "^1.6.1",
     "glamor": "^2.20.40",
     "hex2rgba": "^0.0.1",
