--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -3,6 +3,7 @@
   "version": "16.0.0-beta.5",
   "description": "React package for working with the DOM.",
   "main": "index.js",
+  "unpkg": "umd/react-dom.production.min.js",
   "repository": "facebook/react",
   "keywords": [
     "react"
