Update Sophie's name on more files

--- a/docs/_data/acknowledgements.yml
+++ b/docs/_data/acknowledgements.yml
@@ -62,7 +62,7 @@
   - Basarat Ali Syed
   - Battaile Fauber
   - Beau Smith
-  - Ben Alpert
+  - Sophie Alpert
   - Ben Anderson
   - Ben Brooks
   - Ben Foxall
