--- a/packages/react-reconciler/package.json
+++ b/packages/react-reconciler/package.json
@@ -21,6 +21,9 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "peerDependencies": {
+    "react": "^16.0.0-beta.3"
+  },
   "dependencies": {
     "fbjs": "^0.8.9",
     "loose-envify": "^1.1.0",
