Add browser field to support eg. unpkg.com
It would be great to be able to use react directly through eg. https://unpkg.com/react

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,6 +18,7 @@
     "lib/"
   ],
   "main": "react.js",
+  "browser": "dist/react.min.js",
   "repository": "facebook/react",
   "engines": {
     "node": ">=0.10.0"
