React reconciler: slightly better description and README

--- a/packages/react-reconciler/package.json
+++ b/packages/react-reconciler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-reconciler",
-  "description": "React is a JavaScript library for building user interfaces.",
+  "description": "React package for creating custom reconcilers.",
   "version": "16.0.0-rc.2",
   "keywords": [
     "react"
