Tidied up Gatsby deps and updated them to fix a remark issue

--- a/www/package.json
+++ b/www/package.json
@@ -12,14 +12,14 @@
     "gatsby-plugin-google-analytics": "^1.0.4",
     "gatsby-plugin-manifest": "^1.0.4",
     "gatsby-plugin-offline": "^1.0.4",
-    "gatsby-plugin-preact": "^1.0.3",
     "gatsby-plugin-react-helmet": "^1.0.3",
+    "gatsby-plugin-react-next": "^1.0.3",
     "gatsby-plugin-sharp": "^1.6.2",
     "gatsby-remark-autolink-headers": "^1.4.4",
     "gatsby-remark-copy-linked-files": "^1.5.2",
+    "gatsby-remark-images": "^1.5.11",
     "gatsby-remark-prismjs": "^1.2.1",
     "gatsby-remark-responsive-iframe": "^1.4.3",
-    "gatsby-remark-responsive-image": "next",
     "gatsby-remark-smartypants": "^1.4.3",
     "gatsby-source-filesystem": "^1.4.4",
     "gatsby-transformer-remark": "^1.7.2",
