[Gatsby docs refactor] Make `dev` command more easily tested
**what is the change?:**
If we want to test across different devices, we need to set the `host`
argument and tell Gatsby to listen on all ports.

**why make this change?:**
To be able to visit <my IP address>:8000 on another device and test the
docs.

**test plan:**
Manually tested

--- a/www/package.json
+++ b/www/package.json
@@ -49,7 +49,7 @@
     "url": "git+https://github.com/facebook/react.git"
   },
   "scripts": {
-    "dev": "gatsby develop",
+    "dev": "gatsby develop -H 0.0.0.0",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
