Relocated some misplaced Gatbsy/website polyfills

--- a/www/package.json
+++ b/www/package.json
@@ -9,6 +9,7 @@
     "gatsby/graphql": "0.10.5"
   },
   "dependencies": {
+    "array-from": "^2.1.1",
     "gatsby": "^1.9.9",
     "gatsby-link": "^1.6.9",
     "gatsby-plugin-glamor": "^1.6.4",
@@ -31,7 +32,9 @@
     "hex2rgba": "^0.0.1",
     "react-live": "^1.7.1",
     "remarkable": "^1.7.1",
-    "slugify": "^1.2.1"
+    "slugify": "^1.2.1",
+    "string.prototype.includes": "^1.0.0",
+    "string.prototype.repeat": "^0.2.0"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
