Renamed SyntheticEvent path name from events to synthetic-events. #1

--- a/docs/_data/nav_docs.yml
+++ b/docs/_data/nav_docs.yml
@@ -69,7 +69,7 @@
       title: ReactDOMServer
     - id: dom-elements
       title: DOM Elements
-    - id: events
+    - id: synthetic-events
       title: SyntheticEvent
     - id: test-utils
       title: Test Utilities
