--- a/docs/_data/nav_docs.yml
+++ b/docs/_data/nav_docs.yml
@@ -69,7 +69,7 @@
       title: ReactDOMServer
     - id: dom-elements
       title: DOM Elements
-    - id: synthetic-events
+    - id: events
       title: SyntheticEvent
     - id: test-utils
       title: Test Utilities
