--- a/packages/react-reconciler/package.json
+++ b/packages/react-reconciler/package.json
@@ -1,16 +1,15 @@
 {
   "name": "react-reconciler",
-  "description": "React package for creating custom reconcilers.",
+  "description": "React package for creating custom renderers.",
   "version": "0.1.0",
   "keywords": [
     "react"
   ],
   "homepage": "https://facebook.github.io/react/",
   "bugs": "https://github.com/facebook/react/issues",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "files": [
     "LICENSE",
-    "PATENTS",
     "README.md",
     "index.js",
     "cjs/",
@@ -22,13 +21,13 @@
     "node": ">=0.10.0"
   },
   "peerDependencies": {
-    "react": "^16.0.0-beta.3"
+    "react": "^16.0.0"
   },
   "dependencies": {
-    "fbjs": "^0.8.9",
+    "fbjs": "^0.8.16",
     "loose-envify": "^1.1.0",
-    "object-assign": "^4.1.0",
-    "prop-types": "^15.5.6"
+    "object-assign": "^4.1.1",
+    "prop-types": "^15.6.0"
   },
   "browserify": {
     "transform": [
