--- a/packages/react-reconciler/package.json
+++ b/packages/react-reconciler/package.json
@@ -12,8 +12,7 @@
     "LICENSE",
     "README.md",
     "index.js",
-    "cjs/",
-    "umd/"
+    "cjs/"
   ],
   "main": "index.js",
   "repository": "facebook/react",
@@ -26,8 +25,7 @@
   "dependencies": {
     "fbjs": "^0.8.16",
     "loose-envify": "^1.1.0",
-    "object-assign": "^4.1.1",
-    "prop-types": "^15.6.0"
+    "object-assign": "^4.1.1"
   },
   "browserify": {
     "transform": [
