--- a/scripts/release/package.json
+++ b/scripts/release/package.json
@@ -17,6 +17,7 @@
     "figlet": "^1.2.0",
     "fs-extra": "^4.0.2",
     "log-update": "^2.1.0",
-    "request-promise-json": "^1.0.4"
+    "request-promise-json": "^1.0.4",
+    "semver": "^5.4.1"
   }
 }
