--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-flowtype": "^2.25.0",
     "eslint-plugin-react": "^6.7.1",
-    "eslint-plugin-react-internal": "file:./eslint-rules",
+    "eslint-plugin-react-internal": "file:./scripts/eslint-rules",
     "fbjs": "^0.8.16",
     "fbjs-scripts": "^0.6.0",
     "filesize": "^3.5.6",
@@ -130,7 +130,6 @@
       "ts"
     ],
     "roots": [
-      "<rootDir>/eslint-rules",
       "<rootDir>/mocks",
       "<rootDir>/scripts",
       "<rootDir>/src"
