Add a hacky workaround for Jest/Workspaces issue
Jest sees node_modules and thinks it's third party code.

This is a hacky way to teach Jest to still transform anything in node_modules/react*
if it resolves outside of node_modules (such as to our packages/*) folder.

I'm not very happy with this and we should revisit.

--- a/package.json
+++ b/package.json
@@ -115,6 +115,9 @@
     "transform": {
       ".*": "./scripts/jest/preprocessor.js"
     },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react)"
+    ],
     "setupFiles": [
       "./scripts/jest/setup.js",
       "./scripts/jest/environment.js"
