Move shared code into packages/shared
It's not super clear how to organize this properly yet.

--- a/package.json
+++ b/package.json
@@ -133,11 +133,10 @@
     ],
     "roots": [
       "<rootDir>/packages",
-      "<rootDir>/scripts",
-      "<rootDir>/src"
+      "<rootDir>/scripts"
     ],
     "collectCoverageFrom": [
-      "src/**/*.js"
+      "packages/**/*.js"
     ],
     "timers": "fake"
   }
