Rename native packages

--- a/packages/react-cs-renderer/package.json
+++ b/packages/react-cs-renderer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-cs",
+  "name": "react-cs-renderer",
   "version": "16.0.0",
   "private": true,
   "repository": "facebook/react",
