--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
     "tmp": "~0.0.28",
     "typescript": "~1.8.10",
     "uglify-js": "^2.5.0",
-    "yargs": "^6.3.0",
-    "yarn": "^1.2.1"
+    "yargs": "^6.3.0"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x || 7.x || 8.x",
@@ -140,579 +139,5 @@
       "packages/**/*.js"
     ],
     "timers": "fake"
-  },
-  "name": "react",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KimHwaJoong/react.git"
-  },
-  "author": "kimhwajoong <khjoony4u@gmail.com>",
-  "license": "MIT",
-  "description": "React is a JavaScript library for building user interfaces.",
-  "bugs": {
-    "url": "https://github.com/KimHwaJoong/react/issues"
-  },
-  "homepage": "https://github.com/KimHwaJoong/react#readme",
-  "dependencies": {
-    "JSONStream": "^1.3.1",
-    "acorn-jsx": "^3.0.1",
-    "acorn-globals": "^3.1.0",
-    "abab": "^1.0.4",
-    "acorn": "^4.0.13",
-    "ajv": "^4.11.8",
-    "ajv-keywords": "^1.5.1",
-    "align-text": "^0.1.4",
-    "amdefine": "^1.0.1",
-    "ansi-regex": "^2.1.1",
-    "ansi-escapes": "^1.4.0",
-    "ansi-styles": "^3.2.0",
-    "anymatch": "^1.3.2",
-    "argparse": "^1.0.9",
-    "append-transform": "^0.4.0",
-    "arr-diff": "^2.0.0",
-    "arr-flatten": "^1.1.0",
-    "array-equal": "^1.0.0",
-    "array-differ": "^1.0.0",
-    "alter": "^0.2.0",
-    "array-union": "^1.0.2",
-    "array-uniq": "^1.0.3",
-    "array-unique": "^0.2.1",
-    "array.prototype.find": "^2.0.4",
-    "arrify": "^1.0.1",
-    "asap": "^2.0.6",
-    "assert-plus": "^1.0.0",
-    "asn1": "^0.2.3",
-    "ast-traverse": "^0.1.1",
-    "astral-regex": "^1.0.0",
-    "ast-types": "^0.9.8",
-    "async-each": "^1.0.1",
-    "aws-sign2": "^0.6.0",
-    "asynckit": "^0.4.0",
-    "aws4": "^1.6.0",
-    "babel": "^5.8.38",
-    "babel-code-frame": "^6.26.0",
-    "babel-helper-builder-react-jsx": "^6.26.0",
-    "babel-generator": "^6.26.0",
-    "babel-helper-call-delegate": "^6.24.1",
-    "babel-helper-define-map": "^6.26.0",
-    "babel-helper-function-name": "^6.24.1",
-    "babel-helper-get-function-arity": "^6.24.1",
-    "babel-helper-optimise-call-expression": "^6.24.1",
-    "babel-helper-hoist-variables": "^6.24.1",
-    "babel-helper-remap-async-to-generator": "^6.24.1",
-    "babel-helpers": "^6.24.1",
-    "babel-helper-replace-supers": "^6.24.1",
-    "babel-messages": "^6.23.0",
-    "babel-plugin-dead-code-elimination": "^1.0.2",
-    "babel-plugin-constant-folding": "^1.0.1",
-    "babel-plugin-eval": "^1.0.1",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-inline-environment-variables": "^1.0.1",
-    "babel-plugin-jest-hoist": "^21.2.0",
-    "babel-plugin-member-expression-literals": "^1.0.1",
-    "babel-plugin-property-literals": "^1.0.1",
-    "babel-plugin-proto-to-assign": "^1.0.4",
-    "babel-plugin-react-constant-elements": "^1.0.3",
-    "babel-plugin-react-display-name": "^1.0.3",
-    "babel-plugin-jscript": "^1.0.4",
-    "babel-plugin-remove-debugger": "^1.0.1",
-    "babel-plugin-remove-console": "^1.0.1",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-runtime": "^1.0.7",
-    "babel-plugin-syntax-class-properties": "^6.13.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-react-display-name": "^6.25.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-react-jsx-self": "^6.22.0",
-    "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-plugin-undeclared-variables-check": "^1.0.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-plugin-undefined-to-void": "^1.1.6",
-    "babel-preset-jest": "^21.2.0",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "babel-template": "^6.26.0",
-    "babel-types": "^6.26.0",
-    "balanced-match": "^1.0.0",
-    "binary-extensions": "^1.10.0",
-    "bcrypt-pbkdf": "^1.0.1",
-    "bluebird": "^2.11.0",
-    "boom": "^2.10.1",
-    "beeper": "^1.1.1",
-    "brace-expansion": "^1.1.8",
-    "braces": "^1.8.5",
-    "browser-pack": "^5.0.1",
-    "browser-resolve": "^1.11.2",
-    "breakable": "^1.0.0",
-    "browser-unpack": "^1.2.0",
-    "bser": "^2.0.0",
-    "builtin-modules": "^1.1.1",
-    "caller-path": "^0.1.0",
-    "camelcase": "^1.2.1",
-    "caseless": "^0.12.0",
-    "callsites": "^2.0.0",
-    "center-align": "^0.1.3",
-    "chokidar": "^1.7.0",
-    "ci-info": "^1.1.1",
-    "cli-cursor": "^1.0.2",
-    "circular-json": "^0.3.3",
-    "cli-width": "^2.2.0",
-    "cliui": "^2.1.0",
-    "clone": "^1.0.2",
-    "clone-stats": "^0.0.1",
-    "clone-buffer": "^1.0.0",
-    "co": "^4.6.0",
-    "cloneable-readable": "^1.0.0",
-    "code-point-at": "^1.1.0",
-    "color-name": "^1.1.3",
-    "color-convert": "^1.9.0",
-    "combine-source-map": "^0.6.1",
-    "colors": "^1.0.3",
-    "combined-stream": "^1.0.5",
-    "commander": "^2.11.0",
-    "commoner": "^0.10.8",
-    "concat-stream": "^1.6.0",
-    "concat-map": "^0.0.1",
-    "content-type-parser": "^1.0.1",
-    "convert-source-map": "^1.5.0",
-    "core-util-is": "^1.0.2",
-    "cross-spawn": "^2.2.3",
-    "crc32": "^0.2.2",
-    "cross-spawn-async": "^2.2.5",
-    "cssom": "^0.3.2",
-    "cryptiles": "^2.0.5",
-    "cssstyle": "^0.2.37",
-    "dashdash": "^1.14.1",
-    "d": "^1.0.0",
-    "dateformat": "^2.2.0",
-    "decamelize": "^1.2.0",
-    "debug": "^2.6.9",
-    "deep-is": "^0.1.3",
-    "define-properties": "^1.1.2",
-    "default-require-extensions": "^1.0.0",
-    "defined": "^1.0.0",
-    "deflate-js": "^0.2.3",
-    "defs": "^1.1.1",
-    "diff": "^3.4.0",
-    "doctrine": "^1.5.0",
-    "delayed-stream": "^1.0.0",
-    "detect-indent": "^4.0.0",
-    "detective": "^4.5.0",
-    "duplexer": "^0.1.1",
-    "duplexer2": "^0.0.2",
-    "ecc-jsbn": "^0.1.1",
-    "encoding": "^0.1.12",
-    "duplexify": "^3.5.1",
-    "end-of-stream": "^1.4.0",
-    "errno": "^0.1.4",
-    "error-ex": "^1.3.1",
-    "es-to-primitive": "^1.1.1",
-    "es5-ext": "^0.10.35",
-    "es-abstract": "^1.9.0",
-    "es6-iterator": "^2.0.3",
-    "es6-map": "^0.1.5",
-    "es6-set": "^0.1.5",
-    "es6-weak-map": "^2.0.2",
-    "es6-symbol": "^3.1.1",
-    "escodegen": "^1.9.0",
-    "escope": "^3.6.0",
-    "espree": "^3.5.1",
-    "esprima": "^2.7.3",
-    "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "estraverse": "^4.2.0",
-    "esquery": "^1.0.0",
-    "estree-walker": "^0.2.1",
-    "esutils": "^2.0.2",
-    "event-emitter": "^0.3.5",
-    "execa": "^0.7.0",
-    "exec-sh": "^0.2.1",
-    "esrecurse": "^4.2.0",
-    "expand-brackets": "^0.1.5",
-    "exit-hook": "^1.1.1",
-    "expand-range": "^1.8.2",
-    "expect": "^21.2.1",
-    "extend": "^3.0.1",
-    "extglob": "^0.3.2",
-    "extend-shallow": "^2.0.1",
-    "extsprintf": "^1.3.0",
-    "falafel": "^2.1.0",
-    "fancy-log": "^1.3.0",
-    "fast-levenshtein": "^2.0.6",
-    "fb-watchman": "^2.0.0",
-    "figures": "^1.7.0",
-    "file-entry-cache": "^2.0.0",
-    "filename-regex": "^2.0.1",
-    "fileset": "^2.0.3",
-    "fill-range": "^2.2.3",
-    "find-up": "^2.1.0",
-    "flat-cache": "^1.3.0",
-    "fast-deep-equal": "^1.0.0",
-    "for-in": "^1.0.2",
-    "flow-parser": "^0.43.0",
-    "foreach": "^2.0.5",
-    "for-own": "^0.1.5",
-    "forever-agent": "^0.6.1",
-    "form-data": "^2.1.4",
-    "fs.realpath": "^1.0.0",
-    "fs-readdir-recursive": "^0.1.2",
-    "function-bind": "^1.1.1",
-    "generate-function": "^2.0.0",
-    "generate-object-property": "^1.2.0",
-    "get-stdin": "^5.0.1",
-    "get-caller-file": "^1.0.2",
-    "get-stream": "^3.0.0",
-    "getpass": "^0.1.7",
-    "glob-base": "^0.3.0",
-    "glob-parent": "^2.0.0",
-    "globby": "^5.0.0",
-    "glogg": "^1.0.0",
-    "globals": "^9.18.0",
-    "google-closure-compiler-js": "^20170910.0.1",
-    "graceful-fs": "^4.1.11",
-    "growly": "^1.3.0",
-    "har-schema": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "handlebars": "^4.0.11",
-    "gulplog": "^1.0.0",
-    "har-validator": "^2.0.6",
-    "has-ansi": "^2.0.0",
-    "has": "^1.0.1",
-    "has-flag": "^2.0.0",
-    "hawk": "^3.1.3",
-    "has-gulplog": "^0.1.0",
-    "hoek": "^4.2.0",
-    "hosted-git-info": "^2.5.0",
-    "home-or-tmp": "^2.0.0",
-    "html-encoding-sniffer": "^1.0.1",
-    "http-signature": "^1.1.1",
-    "iconv-lite": "^0.4.19",
-    "imurmurhash": "^0.1.4",
-    "ignore": "^3.3.6",
-    "inherits": "^2.0.3",
-    "inline-source-map": "^0.5.0",
-    "interpret": "^1.0.4",
-    "invariant": "^2.2.2",
-    "invert-kv": "^1.0.0",
-    "is-absolute": "^0.2.6",
-    "is-binary-path": "^1.0.1",
-    "is-builtin-module": "^1.0.0",
-    "is-buffer": "^1.1.5",
-    "is-callable": "^1.1.3",
-    "is-ci": "^1.0.10",
-    "is-date-object": "^1.0.1",
-    "is-dotfile": "^1.0.3",
-    "is-equal-shallow": "^0.1.3",
-    "is-extendable": "^0.1.1",
-    "is-finite": "^1.0.2",
-    "is-extglob": "^1.0.0",
-    "is-fullwidth-code-point": "^1.0.0",
-    "is-glob": "^2.0.1",
-    "is-integer": "^1.0.7",
-    "is-negated-glob": "^1.0.0",
-    "is-my-json-valid": "^2.16.1",
-    "is-number": "^2.1.0",
-    "is-path-cwd": "^1.0.0",
-    "is-path-in-cwd": "^1.0.0",
-    "is-path-inside": "^1.0.0",
-    "is-posix-bracket": "^0.1.1",
-    "is-primitive": "^2.0.0",
-    "is-regex": "^1.0.4",
-    "is-property": "^1.0.2",
-    "is-resolvable": "^1.0.0",
-    "is-relative": "^0.2.1",
-    "is-symbol": "^1.0.1",
-    "is-stream": "^1.1.0",
-    "is-typedarray": "^1.0.0",
-    "is-unc-path": "^0.1.2",
-    "is-utf8": "^0.2.1",
-    "isarray": "^1.0.0",
-    "is-windows": "^0.2.0",
-    "isexe": "^2.0.0",
-    "isobject": "^2.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "isstream": "^0.1.2",
-    "istanbul-lib-coverage": "^1.1.1",
-    "istanbul-api": "^1.2.1",
-    "istanbul-lib-instrument": "^1.9.1",
-    "istanbul-lib-report": "^1.1.2",
-    "istanbul-lib-source-maps": "^1.2.2",
-    "istanbul-reports": "^1.1.3",
-    "istanbul-lib-hook": "^1.1.0",
-    "jest-cli": "^21.2.1",
-    "jest-changed-files": "^21.2.0",
-    "jest-diff": "^21.2.1",
-    "jest-environment-jsdom": "^21.2.1",
-    "jest-environment-node": "^21.2.1",
-    "jest-get-type": "^21.2.0",
-    "jest-haste-map": "^21.2.0",
-    "jest-matcher-utils": "^21.2.1",
-    "jest-message-util": "^21.2.1",
-    "jest-regex-util": "^21.2.0",
-    "jest-mock": "^21.2.0",
-    "jest-resolve": "^21.2.0",
-    "jest-resolve-dependencies": "^21.2.0",
-    "jest-runner": "^21.2.1",
-    "jest-util": "^21.2.1",
-    "jest-snapshot": "^21.2.1",
-    "jest-validate": "^21.2.1",
-    "jsbn": "^0.1.1",
-    "js-tokens": "^3.0.2",
-    "jsdom": "^9.12.0",
-    "js-yaml": "^3.10.0",
-    "is-arrayish": "^0.2.1",
-    "jsesc": "^1.3.0",
-    "json-schema": "^0.2.3",
-    "json-schema-traverse": "^0.3.1",
-    "json-stringify-safe": "^5.0.1",
-    "inflight": "^1.0.6",
-    "json5": "^0.5.1",
-    "inquirer": "^0.12.0",
-    "jsonify": "^0.0.0",
-    "jsonparse": "^1.3.1",
-    "jsonpointer": "^4.0.1",
-    "jsprim": "^1.4.1",
-    "jsx-ast-utils": "^1.4.1",
-    "kind-of": "^3.2.2",
-    "lazy-cache": "^1.0.4",
-    "json-stable-stringify": "^1.0.1",
-    "lcov-parse": "^0.0.10",
-    "leven": "^2.1.0",
-    "levn": "^0.3.0",
-    "locate-path": "^2.0.0",
-    "lodash._basecopy": "^3.0.1",
-    "lodash._basetostring": "^3.0.1",
-    "lodash": "^4.17.4",
-    "lodash._basevalues": "^3.0.0",
-    "lodash._getnative": "^3.9.1",
-    "lodash._isiterateecall": "^3.0.9",
-    "lodash._reescape": "^3.0.0",
-    "lodash._reevaluate": "^3.0.0",
-    "lodash._reinterpolate": "^3.0.0",
-    "lodash._root": "^3.0.1",
-    "lodash.escape": "^3.2.0",
-    "lodash.isarguments": "^3.1.0",
-    "lodash.isarray": "^3.0.4",
-    "lodash.keys": "^3.1.2",
-    "lodash.memoize": "^3.0.4",
-    "lodash.restparam": "^3.6.1",
-    "lodash.template": "^3.6.2",
-    "lodash.templatesettings": "^3.1.1",
-    "log-driver": "^1.2.5",
-    "longest": "^1.0.1",
-    "loose-envify": "^1.3.1",
-    "lru-cache": "^4.1.1",
-    "magic-string": "^0.22.4",
-    "makeerror": "^1.0.11",
-    "mem": "^1.1.0",
-    "load-json-file": "^1.1.0",
-    "merge": "^1.2.0",
-    "mime-types": "^2.1.17",
-    "mimic-fn": "^1.1.0",
-    "minimatch": "^3.0.4",
-    "mkdirp": "^0.5.1",
-    "ms": "^2.0.0",
-    "multipipe": "^0.1.2",
-    "mute-stream": "^0.0.5",
-    "natural-compare": "^1.4.0",
-    "node-fetch": "^1.7.3",
-    "micromatch": "^2.3.11",
-    "mime-db": "^1.30.0",
-    "node-int64": "^0.4.0",
-    "node-notifier": "^5.1.2",
-    "normalize-package-data": "^2.4.0",
-    "normalize-path": "^2.1.1",
-    "npm-run-path": "^2.0.2",
-    "number-is-nan": "^1.0.1",
-    "oauth-sign": "^0.8.2",
-    "nwmatcher": "^1.4.3",
-    "object.assign": "^4.0.4",
-    "object-keys": "^1.0.11",
-    "object.omit": "^2.0.1",
-    "jest-docblock": "^21.2.0",
-    "once": "^1.4.0",
-    "onetime": "^1.1.0",
-    "lcid": "^1.0.0",
-    "os-homedir": "^1.0.2",
-    "ordered-read-streams": "^1.0.1",
-    "optionator": "^0.8.2",
-    "os-shim": "^0.1.3",
-    "os-tmpdir": "^1.0.2",
-    "os-locale": "^1.4.0",
-    "p-cancelable": "^0.3.0",
-    "p-finally": "^1.0.0",
-    "output-file-sync": "^1.1.2",
-    "p-locate": "^2.0.0",
-    "p-limit": "^1.1.0",
-    "parse-glob": "^3.0.4",
-    "parse-json": "^2.2.0",
-    "parse5": "^1.5.1",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^2.0.1",
-    "path-exists": "^1.0.0",
-    "path-parse": "^1.0.5",
-    "path-type": "^1.1.0",
-    "path-is-inside": "^1.0.2",
-    "pinkie": "^2.0.4",
-    "pify": "^2.3.0",
-    "performance-now": "^2.1.0",
-    "pluralize": "^1.2.1",
-    "prelude-ls": "^1.1.2",
-    "pinkie-promise": "^2.0.1",
-    "pretty-format": "^21.2.1",
-    "private": "^0.1.8",
-    "preserve": "^0.2.0",
-    "process-nextick-args": "^1.0.7",
-    "promise": "^7.3.1",
-    "progress": "^1.1.8",
-    "pseudomap": "^1.0.2",
-    "pump": "^1.0.2",
-    "prr": "^0.0.0",
-    "punycode": "^1.4.1",
-    "qs": "^6.3.2",
-    "pumpify": "^1.3.5",
-    "randomatic": "^1.1.7",
-    "react-cs-renderer": "^16.0.0",
-    "q": "^1.5.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-art": "^16.0.0",
-    "react-noop-renderer": "^16.0.0",
-    "optimist": "^0.6.1",
-    "react-native-renderer": "^16.0.0",
-    "read-pkg-up": "^1.0.1",
-    "readable-stream": "^2.3.3",
-    "read-pkg": "^1.1.0",
-    "readline2": "^1.0.1",
-    "recast": "^0.10.33",
-    "readdirp": "^2.1.0",
-    "regenerate": "^1.3.3",
-    "regenerator": "^0.8.40",
-    "rechoir": "^0.6.2",
-    "regex-cache": "^0.4.4",
-    "regexpu": "^1.3.0",
-    "regenerator-runtime": "^0.10.5",
-    "regjsparser": "^0.1.5",
-    "remove-trailing-separator": "^1.1.0",
-    "regjsgen": "^0.2.0",
-    "repeat-string": "^1.6.1",
-    "repeating": "^1.1.3",
-    "repeat-element": "^1.1.2",
-    "request": "^2.79.0",
-    "require-directory": "^2.1.1",
-    "path-dirname": "^1.0.2",
-    "replace-ext": "^0.0.1",
-    "require-uncached": "^1.0.3",
-    "resolve": "^1.4.0",
-    "require-main-filename": "^1.0.1",
-    "restore-cursor": "^1.0.1",
-    "right-align": "^0.1.3",
-    "resolve-from": "^1.0.1",
-    "run-async": "^0.1.0",
-    "rx-lite": "^3.1.2",
-    "rollup-pluginutils": "^1.5.2",
-    "sane": "^2.2.0",
-    "sax": "^1.2.4",
-    "safe-buffer": "^5.1.1",
-    "set-blocking": "^2.0.0",
-    "set-immediate-shim": "^1.0.1",
-    "semver": "^5.4.1",
-    "shebang-command": "^1.2.0",
-    "shebang-regex": "^1.0.0",
-    "setimmediate": "^1.0.5",
-    "shellwords": "^0.1.1",
-    "signal-exit": "^3.0.2",
-    "shelljs": "^0.7.8",
-    "simple-is": "^0.2.0",
-    "slash": "^1.0.0",
-    "simple-fmt": "^0.1.0",
-    "sntp": "^1.0.9",
-    "source-list-map": "^0.1.8",
-    "slice-ansi": "^0.0.4",
-    "source-map-support": "^0.4.18",
-    "sparkles": "^1.0.0",
-    "source-map": "^0.5.7",
-    "spdx-correct": "^1.0.2",
-    "spdx-expression-parse": "^1.0.4",
-    "spawn-sync": "^1.0.15",
-    "sprintf-js": "^1.0.3",
-    "sshpk": "^1.13.1",
-    "spdx-license-ids": "^1.2.2",
-    "stream-shift": "^1.0.0",
-    "string-length": "^2.0.0",
-    "stable": "^0.1.6",
-    "string_decoder": "^1.0.3",
-    "stringmap": "^0.2.2",
-    "string-width": "^1.0.2",
-    "stringstream": "^0.0.5",
-    "strip-ansi": "^3.0.1",
-    "stringset": "^0.2.1",
-    "strip-bom": "^3.0.0",
-    "strip-eof": "^1.0.0",
-    "react-rt-renderer": "^16.0.0",
-    "supports-color": "^2.0.0",
-    "symbol-tree": "^3.2.2",
-    "strip-json-comments": "^2.0.1",
-    "test-exclude": "^4.1.1",
-    "testcheck": "^1.0.0-rc.2",
-    "table": "^3.8.3",
-    "throat": "^4.1.0",
-    "through": "^2.3.8",
-    "text-table": "^0.2.0",
-    "time-stamp": "^1.1.0",
-    "tmpl": "^1.0.4",
-    "through2-filter": "^2.0.0",
-    "tough-cookie": "^2.3.3",
-    "react-reconciler": "^0.1.0",
-    "to-fast-properties": "^1.0.3",
-    "to-absolute-glob": "^2.0.1",
-    "trim-right": "^1.0.1",
-    "react-test-renderer": "^16.0.0",
-    "try-resolve": "^1.0.1",
-    "tryit": "^1.0.3",
-    "tr46": "^0.0.3",
-    "tunnel-agent": "^0.6.0",
-    "tweetnacl": "^0.14.5",
-    "tryor": "^0.1.2",
-    "ua-parser-js": "^0.7.17",
-    "uglify-to-browserify": "^1.0.2",
-    "typedarray": "^0.0.6",
-    "unc-path-regex": "^0.1.2",
-    "unique-stream": "^2.2.1",
-    "umd": "^3.0.1",
-    "uuid": "^3.1.0",
-    "util-deprecate": "^1.0.2",
-    "user-home": "^1.1.1",
-    "validate-npm-package-license": "^3.0.1",
-    "verror": "^1.10.0",
-    "v8flags": "^2.1.1",
-    "type-check": "^0.3.2",
-    "watch": "^0.18.0",
-    "vinyl": "^0.5.3",
-    "whatwg-encoding": "^1.0.1",
-    "webpack-core": "^0.6.9",
-    "webidl-conversions": "^4.0.2",
-    "whatwg-url": "^4.8.0",
-    "which": "^1.3.0",
-    "whatwg-fetch": "^2.0.3",
-    "window-size": "^0.1.0",
-    "wordwrap": "^0.0.2",
-    "which-module": "^1.0.0",
-    "wrap-ansi": "^2.1.0",
-    "wrappy": "^1.0.2",
-    "worker-farm": "^1.5.0",
-    "write-file-atomic": "^2.3.0",
-    "xml-name-validator": "^2.0.1",
-    "write": "^0.2.1",
-    "y18n": "^3.2.1",
-    "yallist": "^2.1.2",
-    "xtend": "^4.0.1",
-    "yargs-parser": "^4.2.1",
-    "vlq": "^0.2.3",
-    "walker": "^1.0.7"
   }
 }
