--- a/packages/react-art/package.json
+++ b/packages/react-art/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://reactjs.org/",
   "dependencies": {
-    "art": "^0.10.1",
     "create-react-class": "^15.6.2",
     "fbjs": "^0.8.16",
     "loose-envify": "^1.1.0",
@@ -33,10 +32,7 @@
     "README.md",
     "index.js",
     "cjs/",
-    "umd/",
-    "Circle.js",
-    "Rectangle.js",
-    "Wedge.js"
+    "umd/"
   ],
   "browserify": {
     "transform": [
