--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   },
   "scripts": {
     "build": "npm run version-check && node scripts/rollup/build.js",
-    "linc": "node ./scripts/tasks/eslint.js",
+    "linc": "node ./scripts/tasks/linc.js",
     "lint": "node ./scripts/tasks/eslint.js",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
     "test": "jest",
