Switch out event delegation for most events
This commit replaces the traditional event delegation technique
employed by React with direct attachment to DOM nodes. This is a test
case to evaluate performance differences.

--- a/fixtures/dom/.gitignore
+++ b/fixtures/dom/.gitignore
@@ -8,8 +8,8 @@ coverage
 
 # production
 build
-public/react.development.js
-public/react-dom.development.js
+public/react.*.js
+public/react-dom.*.js
 
 # misc
 .DS_Store
